# paoo

src/: CMakeLists.txt  main.cpp
src/figura/: CMakeLists.txt  figura.h
src/romb/: CMakeLists.txt  romb.cpp  romb.h
src/romb/romb3d/: CMakeLists.txt  romb3d.cpp  romb3d.h
src/triunghi/: CMakeLists.txt  triunghi.cpp  triunghi.h
